fix actions, reducers, selectors

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-intl": "^3.4.0",
@@ -41,7 +42,8 @@
   },
   "devDependencies": {
     "concurrently": "^5.0.0",
-    "json-server": "^0.15.1"
+    "json-server": "^0.15.1",
+    "redux-devtools-extension": "^2.13.8"
   },
   "proxy": "http://localhost:5000"
 }
